objects/ERP_Device_SPDBOM__c.object
<CustomObject>
    <fields>
        <fullName>APA__c</fullName>
        <label>APA</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APC__c</fullName>
        <label>APC</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BOM</label>
        <referenceTo>BOM__c</referenceTo>
        <relationshipLabel>ERP Device SPDBOM</relationshipLabel>
        <relationshipName>ERPDeviceSPDBOM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Change_Number__c</fullName>
        <label>Change Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <label>Component</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Device__c</fullName>
        <label>ERP Device</label>
        <referenceTo>ERP_Device__c</referenceTo>
        <relationshipLabel>ERP Device SPDBOM</relationshipLabel>
        <relationshipName>ERPDeviceSPDBOM</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>ReadytoSend</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PSASync__c</fullName>
        <formula>if(PSA__c!=null &amp;&amp; APA__c!=null,if(PSA__c == APA__c,&apos;True&apos;,&apos;False&apos;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PSASync</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA__c</fullName>
        <label>PSA</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSCSync__c</fullName>
        <formula>if(PSC__c!=null &amp;&amp; APC__c!=null,if(PSC__c == APC__c,&apos;True&apos;,&apos;False&apos;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PSCSync</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSC__c</fullName>
        <label>PSC</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Component_Pair__c</fullName>
        <externalId>true</externalId>
        <label>Parent Component Pair</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <label>Parent</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_BasicName__c</fullName>
        <label>Part BasicName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Classification__c</fullName>
        <label>Part Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Ecrelease_Status__c</fullName>
        <label>Part_Ecrelease_Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_LabOfDesign__c</fullName>
        <label>Part LabOfDesign</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_LevelCode__c</fullName>
        <label>Part LevelCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Short_Desc__c</fullName>
        <label>Part Short Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Predicted_ITAR__c</fullName>
        <label>ITAR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Or_OptionalFor__c</fullName>
        <label>Primary Or OptionalFor</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Released_Date__c</fullName>
        <label>Released Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>ERP Device SPDBOM</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>APA__c</columns>
        <columns>PSA__c</columns>
        <columns>APC__c</columns>
        <columns>PSC__c</columns>
        <columns>BOM__c</columns>
        <columns>PSASync__c</columns>
        <columns>PSCSync__c</columns>
        <columns>Change_Number__c</columns>
        <columns>ERP_Device__c</columns>
        <columns>Integration_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PSC__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>PSA__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>PSC__c</field>
            <operation>notEqual</operation>
            <value>0000000</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ReadyToSend1</fullName>
        <columns>NAME</columns>
        <columns>Change_Number__c</columns>
        <columns>Component__c</columns>
        <columns>ERP_Device__c</columns>
        <columns>Integration_Status__c</columns>
        <columns>Predicted_ITAR__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Integration_Status__c</field>
            <operation>equals</operation>
            <value>ReadytoSend</value>
        </filters>
        <label>ReadyToSend</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERP Device SPDBOM</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>